fixe horizontal scroll

--- a/src/component/footer.css
+++ b/src/component/footer.css
@@ -63,8 +63,7 @@
         align-items: flex-start;
     }
 
-    .contact-us {
-        padding-left: 30px;
-        margin-left: 20px;
+    .footer-container .one {
+        padding-top: 20px;
     }
 }
