--- a/src/pages/detail.css
+++ b/src/pages/detail.css
@@ -6,6 +6,8 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    padding-inline: 10px;
+    gap: 20px;
 }
 
 .hero-detail .image-container {
@@ -14,6 +16,13 @@
     margin-right: 40px;
     border-radius: 10px;
     overflow: hidden;
+}
+@media (max-width:767px) {
+    .hero-detail .image-container {
+        width:250px ;
+        height: 250px;
+    }
+    
 }
 
 .hero-detail .image-container img {
@@ -85,7 +94,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     position: relative;
 }
 
@@ -102,6 +111,7 @@
     align-items: flex-end;
     margin-bottom: 40px;
     width: 100%;
+    gap: 10px;
 }
 
 .rating-nun .users-rating {
@@ -119,7 +129,7 @@
 }
 
 .main-slider-container {
-    width: 100%;
+    width: 90%;
     height: fit-content;
     display: flex;
     flex-direction: column;
@@ -236,6 +246,13 @@
 @media (max-width:767px) {
     .recomanded-product .recomanded-container {
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    }
+    .second-rating-section {
+        width: fit-content;
+    }
+    .hero-detail {
+        flex-direction: column;
+        align-items: center;
     }
 
 }
